dist_man1_MANS=

if BUILD_VALDCOIND
  dist_man1_MANS+=valdcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=valdcoin-qt.1
endif

if BUILD_VALDCOIN_CLI
  dist_man1_MANS+=valdcoin-cli.1
endif

if BUILD_VALDCOIN_TX
  dist_man1_MANS+=valdcoin-tx.1
endif

if BUILD_VALDCOIN_UTIL
  dist_man1_MANS+=valdcoin-util.1
endif

if ENABLE_WALLET
if BUILD_VALDCOIN_WALLET
  dist_man1_MANS+=valdcoin-wallet.1
endif
endif
